# Catch2

./: CMakeLists.txt
contrib/: ParseAndAddCatchTests.cmake
projects/: CMakeLists.txt
projects/CMakeIntegration/: CMakeCTestRegistration.tests.cpp  CMakeLists.txt
projects/SelfTest/UsageTests/: CMakeCTestRegistration.tests.cpp
